force-app/main/default/objects/Opportunity/fields/Comodidad_y_conveniencia__c.field-meta.xml
<CustomField>
    <fullName>Comodidad_y_conveniencia__c</fullName>
    <label>Comodidad y conveniencia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>