force-app/main/default/objects/Opportunity/fields/Concesionario2__c.field-meta.xml
<CustomField>
    <fullName>Concesionario2__c</fullName>
    <formula>Concesionario__r.Codigo_concesionario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concesionario</label>
    <type>Text</type>
</CustomField>