force-app/main/default/objects/Opportunity/fields/Concesionario__c.field-meta.xml
<CustomField>
    <fullName>Concesionario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Concesionario</label>
    <referenceTo>Concesionario__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>