force-app/main/default/objects/Opportunity/fields/Consultado_en_listas_restrictivas__c.field-meta.xml
<CustomField>
    <fullName>Consultado_en_listas_restrictivas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sin coincidencias listas restrictivas</label>
    <type>Checkbox</type>
</CustomField>