force-app/main/default/objects/Opportunity/fields/Convenio__c.field-meta.xml
<CustomField>
    <fullName>Convenio__c</fullName>
    <label>Convenio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empresarial</fullName>
                <label>Convenio Empresarial</label>
            </value>
            <value>
                <fullName>Sin Convenio</fullName>
                <default>true</default>
                <label>Sin Convenio</label>
            </value>
            <value>
                <fullName>Bavaria</fullName>
                <isActive>false</isActive>
                <label>Bavaria</label>
            </value>
            <value>
                <fullName>Nutresa</fullName>
                <isActive>false</isActive>
                <label>Nutresa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>