force-app/main/default/objects/Opportunity/fields/Correo_Electronico_FactANomb__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_FactANomb__c</fullName>
    <formula>IF( Facturar_a_nombre_de__r.RecordType.Name &lt;&gt; &quot;Persona Natural&quot;, Facturar_a_nombre_de__r.MC_Correo_electronico_Empresa__c ,Facturar_a_nombre_de__r.PersonContact.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Correo Electrónico</label>
    <type>Text</type>
</CustomField>