force-app/main/default/objects/Opportunity/fields/Descripcion_de_Anulacion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_de_Anulacion__c</fullName>
    <label>Descripción de Anulación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>