force-app/main/default/objects/Opportunity/fields/Destinatario_Factura__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_Factura__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinatario Factura</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Destinatario Factura)</relationshipLabel>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>