force-app/main/default/objects/Opportunity/fields/Destinatario_Mercanc_a__c.field-meta.xml
<CustomField>
    <fullName>Destinatario_Mercanc_a__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinatario Mercancía</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Destinatario Mercancía)</relationshipLabel>
    <relationshipName>Oportunidades4</relationshipName>
    <type>Lookup</type>
</CustomField>