force-app/main/default/objects/Opportunity/fields/Detalle_categor_a_fuente_de_prospecci_n__c.field-meta.xml
<CustomField>
    <fullName>Detalle_categor_a_fuente_de_prospecci_n__c</fullName>
    <inlineHelpText>Amplíe el detalle de la categoría fuente de prospección ej, actividad en colegio ABC</inlineHelpText>
    <label>Detalle categoría fuente de prospección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>