force-app/main/default/objects/Opportunity/fields/Dias_desde_que_se_envio_el_pedido__c.field-meta.xml
<CustomField>
    <fullName>Dias_desde_que_se_envio_el_pedido__c</fullName>
    <formula>DAY(TODAY()) - DAY( Fecha_de_envio_a_UNOEE__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias desde que se envio el pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>