force-app/main/default/objects/Opportunity/fields/Direccion_FactANomb__c.field-meta.xml
<CustomField>
    <fullName>Direccion_FactANomb__c</fullName>
    <formula>Facturar_a_nombre_de__r.AM_Direccion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección</label>
    <type>Text</type>
</CustomField>