force-app/main/default/objects/Opportunity/fields/Distribuidor__c.field-meta.xml
<CustomField>
    <fullName>Distribuidor__c</fullName>
    <label>Distribuidor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dist. Autosaman</fullName>
            </value>
            <value>
                <fullName>Dist. Armotor Armenia</fullName>
            </value>
            <value>
                <fullName>Dist Alcala Motor Bogotá</fullName>
            </value>
            <value>
                <fullName>Dist Alcala Motor Tunja</fullName>
            </value>
            <value>
                <fullName>Dist Alcala Motor Villavicencio</fullName>
            </value>
            <value>
                <fullName>Dist Armotor Manizalez</fullName>
            </value>
            <value>
                <fullName>Dist Armotor Pereira</fullName>
            </value>
            <value>
                <fullName>Dist Autoacacio Sta Marta</fullName>
            </value>
            <value>
                <fullName>Dist Autoacacio Valledupar</fullName>
            </value>
            <value>
                <fullName>Dist Autoarrayan</fullName>
            </value>
            <value>
                <fullName>Dist Autocaobos</fullName>
            </value>
            <value>
                <fullName>Dist Autocedro - Colwagen</fullName>
            </value>
            <value>
                <fullName>Dist Autochicala</fullName>
            </value>
            <value>
                <fullName>Dist Autosakura</fullName>
            </value>
            <value>
                <fullName>Dist Autosaman Ibagué</fullName>
            </value>
            <value>
                <fullName>Dist Autosaman - Neiva</fullName>
            </value>
            <value>
                <fullName>Dist Autosauce - Tuluá</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>