force-app/main/default/objects/Opportunity/fields/Documentos_completos_pedido__c.field-meta.xml
<CustomField>
    <fullName>Documentos_completos_pedido__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Carga de: Cédula o RUT, RC, Aprobación financiación, Retoma, OC</inlineHelpText>
    <label>Soportes cargados pedido</label>
    <type>Checkbox</type>
</CustomField>