force-app/main/default/objects/Opportunity/fields/Documentos_Entrega_Cargados__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Entrega_Cargados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentos Entrega Cargados</label>
    <type>Checkbox</type>
</CustomField>