force-app/main/default/objects/Opportunity/fields/Donde_Vendio__c.field-meta.xml
<CustomField>
    <fullName>Donde_Vendio__c</fullName>
    <label>Dónde Vendió?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>