force-app/main/default/objects/Opportunity/fields/Empresa_de_Convenio__c.field-meta.xml
<CustomField>
    <fullName>Empresa_de_Convenio__c</fullName>
    <label>Empresa de Convenio</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Convenio__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ACIN - ASOCIACIÓN DE CABILDOS</fullName>
            </value>
            <value>
                <fullName>BAT BRITISH AMERICA TOBACCO</fullName>
            </value>
            <value>
                <fullName>CABILDO INDIGENA - CORINTO</fullName>
            </value>
            <value>
                <fullName>CABILDO INDIGENA LAS DELICICIAS BUENOS AIRES</fullName>
            </value>
            <value>
                <fullName>CABILDO INDIGENA - RESGUARDO DE JAMBALO</fullName>
            </value>
            <value>
                <fullName>CABILDO INDIGENA - SAN FRANCISCO</fullName>
            </value>
            <value>
                <fullName>CABILDO INDIGENA - TACUEYO</fullName>
            </value>
            <value>
                <fullName>CABILDO INDIGENA - TORIBIO</fullName>
            </value>
            <value>
                <fullName>CABILDO MUNCHIQUE LOS TRIGRES</fullName>
            </value>
            <value>
                <fullName>COMFACAUCA</fullName>
            </value>
            <value>
                <fullName>FONDO EMPLEADOS EMTEL</fullName>
            </value>
            <value>
                <fullName>FONDO EMPLEADOS ESTANCIA</fullName>
            </value>
            <value>
                <fullName>FONREY - FONDO DE EMPLEADOS DE CONDIMENTOS EL REY</fullName>
            </value>
            <value>
                <fullName>ULTRAHICA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>