force-app/main/default/objects/Opportunity/fields/Es_un_HONDA_adicional__c.field-meta.xml
<CustomField>
    <fullName>Es_un_HONDA_adicional__c</fullName>
    <label>¿Es un HONDA adicional?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Reemplazo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>