force-app/main/default/objects/Opportunity/fields/Estado_V__c.field-meta.xml
<CustomField>
    <fullName>Estado_V__c</fullName>
    <label>Estado oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>