force-app/main/default/objects/Opportunity/fields/Facturar_a_nombre_de__c.field-meta.xml
<CustomField>
    <fullName>Facturar_a_nombre_de__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facturar a nombre de:</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades1</relationshipName>
    <type>Lookup</type>
</CustomField>