force-app/main/default/objects/Opportunity/fields/Fecha_cierre_atrasada__c.field-meta.xml
<CustomField>
    <fullName>Fecha_cierre_atrasada__c</fullName>
    <formula>IF( TEXT(StageName ) = &quot;Perdida&quot; || TEXT(StageName ) = &quot;Vendida&quot;, 0,

CloseDate - TODAY()
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha cierre atrasada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>