force-app/main/default/objects/Opportunity/fields/Fecha_comentario_seguimiento_gerente__c.field-meta.xml
<CustomField>
    <fullName>Fecha_comentario_seguimiento_gerente__c</fullName>
    <label>Fecha comentario seguimiento gerente</label>
    <type>Date</type>
</CustomField>