force-app/main/default/objects/Opportunity/fields/Fecha_de_Best_Drive__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Best_Drive__c</fullName>
    <label>Fecha de Best Drive</label>
    <type>Date</type>
</CustomField>