force-app/main/default/objects/Opportunity/fields/Fecha_de_comprometido__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_comprometido__c</fullName>
    <label>Fecha de comprometido</label>
    <type>Date</type>
</CustomField>