force-app/main/default/objects/Opportunity/fields/Fecha_de_creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion__c</fullName>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creacion de la oportunidad</label>
    <type>Date</type>
</CustomField>