force-app/main/default/objects/Opportunity/fields/Fecha_de_creacion_solo_fecha2__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion_solo_fecha2__c</fullName>
    <formula>DATEVALUE(CreatedDate )</formula>
    <label>Fecha de creacion solo fecha2</label>
    <type>Date</type>
</CustomField>