force-app/main/default/objects/Opportunity/fields/Fecha_de_creacion_solo_fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_creacion_solo_fecha__c</fullName>
    <formula>DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de creacion solo fecha</label>
    <type>Date</type>
</CustomField>