force-app/main/default/objects/Opportunity/fields/Fecha_de_envio_a_UNOEE__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_envio_a_UNOEE__c</fullName>
    <label>Fecha de envio a UNOEE</label>
    <type>Date</type>
</CustomField>