force-app/main/default/objects/Opportunity/fields/Fecha_de_factura__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_factura__c</fullName>
    <label>Fecha de factura</label>
    <type>Date</type>
</CustomField>