force-app/main/default/objects/Opportunity/fields/Fecha_estimada_de_compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_estimada_de_compra__c</fullName>
    <label>Fecha de vigencia</label>
    <type>Date</type>
</CustomField>