force-app/main/default/objects/Opportunity/fields/Forma_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_pago__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Oportunidad__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Contado</fullName>
            </value>
            <value>
                <fullName>Credito / Leasing</fullName>
            </value>
            <value>
                <fullName>Credito/Leasing + Contado</fullName>
            </value>
            <value>
                <fullName>Contado + Retoma</fullName>
            </value>
            <value>
                <fullName>Crédito / Leasing + Retoma</fullName>
            </value>
            <value>
                <fullName>Contado + Crédito + Retoma</fullName>
            </value>
            <value>
                <fullName>101 - Contado</fullName>
            </value>
            <value>
                <fullName>102 - Crédito Progreser (FORMATO TIPO CREDITO)</fullName>
            </value>
            <value>
                <fullName>103 - Cartera Propia</fullName>
            </value>
            <value>
                <fullName>104 - Negocios Especiales</fullName>
            </value>
            <value>
                <fullName>105 - Otras Financieras (FORMATO TIPO CRÉDITO)</fullName>
            </value>
            <value>
                <fullName>107 - E-commerce&quot;</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>