force-app/main/default/objects/Opportunity/fields/Frase_con_que_se_identifica_mas__c.field-meta.xml
<CustomField>
    <fullName>Frase_con_que_se_identifica_mas__c</fullName>
    <label>¿Frase con que se identifica más?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&quot;No le busca la quinta pata al gato&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Donde caben 2, caben 3,4,5...&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Una cosa no sacrifica a la otra&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Ahora si sabrás quién soy yo&quot;</fullName>
            </value>
            <value>
                <fullName>&quot;Soy lo que compro&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>