force-app/main/default/objects/Opportunity/fields/Fuente__c.field-meta.xml
<CustomField>
    <fullName>Fuente__c</fullName>
    <label>Fuente de Oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sala de Ventas</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>BTL</fullName>
            </value>
            <value>
                <fullName>Posventa</fullName>
            </value>
            <value>
                <fullName>Progreser</fullName>
            </value>
            <value>
                <fullName>Canal Empresarial</fullName>
            </value>
            <value>
                <fullName>Referidos</fullName>
            </value>
            <value>
                <fullName>Actividades externas</fullName>
                <isActive>false</isActive>
                <label>Actividades externas</label>
            </value>
            <value>
                <fullName>BTL Canal Empresarial</fullName>
                <isActive>false</isActive>
                <label>BTL Canal Empresarial</label>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
                <isActive>false</isActive>
                <label>Ecommerce</label>
            </value>
            <value>
                <fullName>Posventa/Taller/Almacén</fullName>
                <isActive>false</isActive>
                <label>Posventa/Taller/Almacén</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>