force-app/main/default/objects/Opportunity/fields/GTAO_PedidoEnviadoSAP__c.field-meta.xml
<CustomField>
    <fullName>GTAO_PedidoEnviadoSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GTAO PedidoEnviadoSAP</label>
    <type>Checkbox</type>
</CustomField>