force-app/main/default/objects/Opportunity/fields/ID_de_pedido_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_de_pedido_ERP__c</fullName>
    <externalId>true</externalId>
    <label>ID de pedido ERP</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>