force-app/main/default/objects/Opportunity/fields/Kilometraje_retoma__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje_retoma__c</fullName>
    <label>Kilometraje retoma</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>