force-app/main/default/objects/Opportunity/fields/Linea_Modelo__c.field-meta.xml
<CustomField>
    <fullName>Linea_Modelo__c</fullName>
    <label>Linea / Modelo Honda adicional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>