force-app/main/default/objects/Opportunity/fields/Linea_Modelo_Marca_Considero_1__c.field-meta.xml
<CustomField>
    <fullName>Linea_Modelo_Marca_Considero_1__c</fullName>
    <label>Linea/Modelo/Marca Consideró - Opción 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>