force-app/main/default/objects/Opportunity/fields/Linea_retoma__c.field-meta.xml
<CustomField>
    <fullName>Linea_retoma__c</fullName>
    <label>Línea retoma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>