force-app/main/default/objects/Opportunity/fields/ManagerFilter__c.field-meta.xml
<CustomField>
    <fullName>ManagerFilter__c</fullName>
    <formula>IF( Owner.ManagerId =  $User.Id ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ManagerFilter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>