force-app/main/default/objects/Opportunity/fields/Marca_de_moto__c.field-meta.xml
<CustomField>
    <fullName>Marca_de_moto__c</fullName>
    <label>Marca de moto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hero</fullName>
            </value>
            <value>
                <fullName>Pulsar</fullName>
            </value>
            <value>
                <fullName>AKT</fullName>
            </value>
            <value>
                <fullName>Bajaj</fullName>
            </value>
            <value>
                <fullName>Jialing</fullName>
            </value>
            <value>
                <fullName>Kawasaki</fullName>
            </value>
            <value>
                <fullName>Kymco</fullName>
            </value>
            <value>
                <fullName>Suzuki</fullName>
            </value>
            <value>
                <fullName>Yamaha</fullName>
            </value>
            <value>
                <fullName>TVS</fullName>
            </value>
            <value>
                <fullName>KTM</fullName>
            </value>
            <value>
                <fullName>UM</fullName>
            </value>
            <value>
                <fullName>Honda</fullName>
            </value>
            <value>
                <fullName>Ninguna</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>